# filamentdb

./: .gitignore  README.md  pyproject.toml
blog/: filamentdb-intro.md
data/: filaments.json
filamentdb/: cli.py  database.py
